[package]
name = "nonfungible-token-integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[[example]]
name = "integration-tests"
path = "src/tests.rs"