[package]
name = "fungible-token-integration-tests"
version = "1.0.0"
publish = false
edition = "2018"

[dev-dependencies]
near-sdk = "4.1.1"
anyhow = "1.0.79"
borsh = "1.3.1"
maplit = "1.0.2"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0.113", features = ["arbitrary_precision"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
workspaces = "0.7.0"
pkg-config = "0.3.29"

[[example]]
name = "integration-tests"
path = "src/tests.rs"